# wheelfile

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  __build__.py  example.py  pyproject.toml  repack.py  requirements-dev.txt  requirements.txt  test_wheelfile.py  wheelfile.py
.github/workflows/: lint.yml  test.yml
docs/: conf.py  index.rst
docs/examples/: build_pep517_example.py  buildscript.rst  pep-517-builder.rst  pep_517_builder.py  simple_build.rst
stubs/: zipfile38.pyi
tests/: conftest.py  test_corrupted_metadata.py  test_lazy_mode.py  test_metas.py  test_resolved.py  test_wheel_gen.py  test_wheelfile.py  test_wheelfile_cloning.py  test_wheelfile_readmode.py  test_wheels_with_vendoring.py
